--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <body>
     <h1>Bienvenido a mi sitio web</h1>
     <p>aqui abajo encontraras mas sobre el proyecto y posts sobre lo que hago.</p>
-    <li><a href="/posts">
+    <li><a href="azkeel127.github.io/azkeel-code/posts">
         <button>ir a post</button>
     </li>
     <li>
-        <a href="/about">
+        <a href="azkeel127.github.io/azkeel-code/about">
             <button>ir a about</button>
         </li>
 </body>
